# ftpclient-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
FTP/: CMakeLists.txt  CurlHandle.cpp  CurlHandle.h  FTPClient.cpp  FTPClient.h
TestFTP/: CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  main.cpp  template_test_conf.ini  test_utils.cpp  test_utils.h
TestFTP/sha1/: SHA1.cpp  SHA1.h
TestFTP/simpleini/: ConvertUTF.h  SimpleIni.h  snippets.cpp  test1.cpp  testsi.cpp
